fix: color palette swatches wrapping issue resolved

--- a/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-rtl.css
@@ -511,15 +511,16 @@
         padding: 0 4px;
 	}
 	/** Modal Popup */
-	.ast-field-settings-modal .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
+	.ast-fields-wrap .components-circular-option-picker__option-wrapper .components-circular-option-picker__option:focus::after {
 		width: 21px;
 		height: 21px;
 	}
-	.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option-wrapper {
-		height: 22px;
-		width: 22px;
+	.ast-fields-wrap .ast-color-palette .components-circular-option-picker__option-wrapper,
+	.ast-fields-wrap .ast-color-palette .components-circular-option-picker__option-wrapper {
+		height: 20px;
+		width: 20px;
 	}
-	.ast-field-settings-modal .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
+	.ast-fields-wrap .ast-color-palette .components-circular-option-picker__option.is-pressed + svg {
 		right: 2.5px;
 		top: -1px;
 		width: 18px;
